k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-ingress
  namespace: ecom-prod
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
    - host: api.shop.example.com
      http:
        paths:
          - path: /api/v1/products
            pathType: Prefix
            backend:
              service: { name: product-service, port: { number: 80 } }
          - path: /api/v1/categories
            pathType: Prefix
            backend:
              service: { name: product-service, port: { number: 80 } }
          - path: /api/v1/cart
            pathType: Prefix
            backend:
              service: { name: cart-service, port: { number: 80 } }
          - path: /api/v1/inventory
            pathType: Prefix
            backend:
              service: { name: inventory-service, port: { number: 80 } }
          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service: { name: order-service, port: { number: 80 } }
          - path: /api/v1/notify
            pathType: Prefix
            backend:
              service: { name: notification-service, port: { number: 80 } }
          - path: /
            pathType: Prefix
            backend:
              service: { name: api-gateway, port: { number: 80 } }
    - host: admin.shop.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: admin-service, port: { number: 80 } }
    - host: shop.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: frontend, port: { number: 80 } }
